Fixed nav z-index

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -212,6 +212,7 @@ button {
 
 .reportNav {
   background: $darkGrey;
+  z-index: 10;
 
   @include media-query($on-palm) {
     position: static !important;
